# mlops

./: .pre-commit-config.yaml  Makefile  README.md  data.dvc  hello.py  pyproject.toml
.dvc/: config
.github/workflows/: codecheck.yml  docker.yml  format.yml  tests.yml
Shared_exercises/M4/: checkpoint.pth  data.py  main.py  model.py
Shared_exercises/M4_soren/: data.py  inspection.ipynb  main.py  model.py
day2_soren_cookiecutter_project/: __init__.py
docs/: mkdocs.yaml
docs/source/: index.md
jacob_mnist/: .gitignore  Makefile  README.md  checkpoint.pth  data.dvc  predict.dockerfile  pyproject.toml  requirements.txt  trainer.dockerfile
jacob_mnist/.dvc/: config
jacob_mnist/.github/workflows/: tests.yaml  tests.yml
jacob_mnist/docs/: mkdocs.yaml
jacob_mnist/docs/source/: index.md
jacob_mnist/jacob_mnist/: __init__.py  predict_model.py  train_model.py
jacob_mnist/jacob_mnist/data/: make_dataset.py
jacob_mnist/jacob_mnist/models/: model.py
jacob_mnist/models/: checkpoint.pth  docker_checkpoint.pth
jacob_mnist/tests/: test_data.py  test_model.py  test_train.py
