[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "day2_soren_cookiecutter_project"
version = "0.0.1"
description = "day 2 MLOps project with cookiecutter"
authors = [
  { name = "sorenblatt", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.11.5"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["day2_soren_cookiecutter_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
